# py_discord_mcp

./: Dockerfile  README.md  __init__.py  pyproject.toml  smithery.yaml
src/: __init__.py  mcp_server.py
src/discord_mcp/: __init__.py  mcp_server.py
