[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
authors = [
    {name = "Hanweg Altimer", email = "hanwegaltimer@outlook.com"},
]
dependencies = [
    "discord.py>=2.3.0",
    "mcp>=0.1.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcp-discord = "src:main"