[project]
name = "mcp-discord"
version = "0.1.0"
description = "Discord integration for Model Context Protocol"
authors = [
    {name = "YIDEUNKIM", email = "rladlems1031@gmail.com"},
]
dependencies = [
    "discord.py>=2.3.0",
    "mcp>=1.0.0", # resent version
]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/YIDEUNKIM/py_discord_mcp"
Repository = "https://github.com/YIDEUNKIM/py_discord_mcp.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/discord_mcp"]

[project.scripts]
mcp-discord = "discord_mcp:main"
